# playwright-screenshot-rpc

./: .env.example  .gitignore  Caddyfile  README.md  config.py  pyproject.toml  requirements.txt
deploy/systemd/: README.md  rpc-server-api.service  rpc-server-worker.service
server/: main.py  models.py  rpc_handler.py  screenshot_service.py  task_manager.py  worker.py
tests/: test_main.py  test_rpc.py  test_screenshot.py  test_screenshot_service_lifecycle.py  test_worker.py
